# frostbyte-hackathon

backend/: pyproject.toml  verify_xp.py
backend/app/: config.py  database.py  game_mechanics.py  langgraph_workflow.py  main.py
backend/app/routers/: activities.py  example.py  impact.py  missions.py  receipts.py  shopping.py  survey.py
backend/app/services/: climatiq_service.py  gemini_alternatives.py  gemini_receipt_parser.py  shopping_agent.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/components/: MissionCard.tsx  PlantVisualization.tsx  RightSidebar.tsx  Sidebar.tsx  WeeklyImpact.tsx  XPProgressBar.tsx
frontend/app/impact/: page.tsx
frontend/app/login/: page.tsx
frontend/app/missions/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/receipt-scanner/: page.tsx
frontend/app/shopping-assistant/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/survey/: page.tsx
frontend/lib/: supabase.ts
